feat: find us section

--- a/BMS/bms.html
+++ b/BMS/bms.html
@@ -53,12 +53,33 @@
 
     <!-- About section start -->
     <section id="about" class="about" data-aos="zoom-in-down" data-aos-duration="5000" data-aos-delay="300">
-      <h2><span>About</span> Me</h2>
+      <h2><span>About</span> Us</h2>
       <div class="row">
         <div class="content">
           <p style="text-align: justify;"> <!-- Prompting dikit -->
             Plaza Selatan adalah area yang dirancang sebagai ruang interaksi dan berbagi informasi bagi warga Informatika. Di sini, terdapat mading yang menampilkan berbagai informasi terkini, serta beberapa Tugas Akhir (TA) dari mahasiswa yang dipamerkan untuk memberikan inspirasi dan referensi. Selain itu, fasilitas lounge yang nyaman juga tersedia, memberikan tempat bagi mahasiswa untuk bersantai, berdiskusi, atau bekerja secara kolaboratif. Ruang ini menjadi titik pusat bagi komunitas Informatika untuk berkumpul, berbagi ide, dan menikmati suasana yang mendukung kegiatan akademik maupun sosial.
           </p>
+        </div>
+        <!-- Find Us In Section -->
+      <div class="find-us-in">
+        <h3>Find us in</h3>
+        <div class="location-card">
+          <div class="location-image">
+            <img src="img/location-placeholder.jpg" alt="Location Image" />
+          </div>
+          <div class="location-details">
+            <h4 class="location-name">Informatics South Area - 2nd Floor</h4>
+            <p class="location-description">
+              Teknik Kimia Street - Teknik Informatika Departement<br>
+              Campus Institut Teknologi Sepuluh Nopember Surabaya<br>
+              Highway ITS, Sukolilo, Surabaya 60111, Indonesia
+            </p>
+            <div class="location-schedule">
+              <strong>Opening Hours:</strong>
+              <p>Mon - Fri: 7 AM - 6 PM</p>
+              <p>Sat - Sun: Closed</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
