feat: placeholder for everything

--- a/BMS/bms.html
+++ b/BMS/bms.html
@@ -65,7 +65,7 @@
         <h3>Find us in</h3>
         <div class="location-card">
           <div class="location-image">
-            <img src="img/location-placeholder.jpg" alt="Location Image" />
+            <img src="img/placeholder.jpg" alt="Location Image" />
           </div>
           <div class="location-details">
             <h4 class="location-name">Informatics South Area - 2nd Floor</h4>
@@ -92,14 +92,14 @@
       <div class="row">
         <div class="facility-card">
           <img
-            src="img/schematics2024.png"
+            src="img/placeholder.jpg"
             class="facility-card-img"
             width="300"
           />
           <h3 class="facility-card-title">Cantumin Fasilitas</h3>
         </div>
         <div class="facility-card">
-          <img src=".png" class="facility-card-img" width="300" />
+          <img src="img/placeholder.jpg" class="facility-card-img" width="300" />
           <h3 class="facility-card-title">Cantumin fasilitas</h3>
         </div>
       </div>
